[gd_scene load_steps=8 format=1]

[ext_resource path="res://UI/Desktop/InfoTabs.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Desktop/active_info_tab3.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Desktop/active_info_tab2.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Desktop/active_info_tab1.png" type="Texture" id=4]
[ext_resource path="res://Assets/processed_fonts/info_overlay_text.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Assets/processed_fonts/info_overlay_text_italic.fnt" type="BitmapFont" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[node name="InfoTabs" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ActiveTabSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 220, 214 )
frames = SubResource( 1 )
animation = "1"

[node name="SkillDescription" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 90.0
margin/right = 420.0
margin/bottom = 420.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="SkillName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 56.0
margin/right = 133.0
margin/bottom = 82.0
custom_fonts/font = ExtResource( 6 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


